# hello-elastic-ltr

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
es-docker/: Dockerfile
notebooks/: hello-elastic-ltr-basedon-elasticsearch-labs.ipynb  hello-o19s-ltr-basedon-elasticsearch-labs.ipynb
rest/: es-o19s.rest  es815.rest
